Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1>Cass O'Sullivan</h1>
+<h3>Profile</h3>
+<ul>
+    <li>Started: 31/07/25 </li>
+    <li>Role: Software Developer</li>
+    <li>Hobbies: Drawing, TV shows, and playing old Sonic games</li>
+</ul>
